switch email with name

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -112,7 +112,7 @@
                   <p class="text-white-50 small mb-0">
                     Si deseas eliminar tu perfil permanentemente y no aparecer más en la base de datos, envía un correo al
                     administrador.
-                    Si el remitente coincide con el correo registrado en el perfil, se procederá a la <strong
+                    Si el remitente coincide con el nombre registrado en el perfil, se procederá a la <strong
                       class="text-white">eliminación inmediata</strong>.
                   </p>
                 </div>
