--- a/src/app/components/buitres/buitres.component.html
+++ b/src/app/components/buitres/buitres.component.html
@@ -1,14 +1,14 @@
 <div class="buitres-container mt-4 animate-fade-in">
     <div class="header-section text-center mb-5">
-        <h2 class="section-title">Encuentra y <span class="text-gradient">Buitrea </span> a quien quieras en completo
-            anonimato</h2>
+        <h2 class="section-title">Encuentra y <span class="text-gradient">Buitrea </span> a quien quieras <span class="text-gradient">en completo
+            anonimato</span></h2>
         <p class="section-subtitle">Busca si esa persona ya está en nuestra base de datos comunitaria, si no creala.</p>
         <p class="section-subtitle small mt-2">
             si no sabes el nombre a quien quieres buitrear, siempre tendremos a nuestros amigos 
             <a href="https://www.instagram.com/buitresuptcsogamoso/" target="_blank" class="text-gradient fw-bold">@BuitresUptcSogamoso</a>
         </p>
         <div class="stats-badge mt-2 d-flex align-items-center justify-content-center gap-3">
-            <span><i class="fas fa-users me-1"></i> {{ totalPeople }} perfiles registrados</span>
+            <span><i class="fas fa-users me-1"></i> 21964 perfiles registrados</span>
             <button *ngIf="isLoggedIn" class="btn btn-link text-danger btn-sm p-0 text-decoration-none"
                 (click)="logout()">
                 <i class="fas fa-sign-out-alt me-1"></i> Cerrar Sesión
