preview en notas y interceptor

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,13 @@
 <div class="about-container fade-in">
-  
+  <!-- Info & Schedule -->
+  <div class="row container mx-auto mb-5 g-4">
+    <div class="col-12">
+      <div class="schedule-wrapper">
+        <app-schedule></app-schedule>
+      </div>
+    </div>
+  </div>
+
   <!-- Hero Section -->
   <div class="hero-section text-center">
     <div class="logo-animation mb-4">
@@ -167,11 +175,6 @@
   <div class="row container mx-auto mb-5 g-4">
     <div class="col-12">
       <app-announcement></app-announcement>
-    </div>
-    <div class="col-12">
-      <div class="schedule-wrapper">
-        <app-schedule></app-schedule>
-      </div>
     </div>
   </div>
 
